# allocators

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  conanfile.py  run  run_clang_format.sh  runner.py
.github/workflows/: linux.yml  mac.yml  test.yml
cmake/: libdmt.Config.cmake.in
examples/: CMakeLists.txt  allocator.cpp  handle.cpp
include/: libdmt.h
include/allocators/: parameters.hpp  trait.hpp
include/allocators/adapter/: adapter.hpp
include/allocators/common/: error.hpp  parameters.hpp  trait.hpp
include/allocators/internal/: block.hpp  block_array.hpp  block_map.hpp  failure.hpp  platform.hpp  util.hpp
include/allocators/object/: block.hpp  bump.hpp  freelist.hpp
include/allocators/provider/: lock_free_page.hpp  lockfree_page.hpp  page.hpp  static.hpp  unsynchronized_page.hpp
include/allocators/strategy/: block.hpp  bump.hpp  freelist.hpp  lock_free_bump.hpp  lockfree_bump.hpp
include/cppalloc/: adapter.hpp  block.hpp  bump.hpp  error.hpp  fixed.hpp  freelist.hpp  page.hpp  parameters.hpp  static.hpp  trait.hpp
include/cppalloc/adapter/: adapter.hpp
include/cppalloc/block/: page.hpp  static.hpp
include/cppalloc/internal/: block.hpp  failure.hpp  platform.hpp  util.hpp
include/cppalloc/object/: block.hpp  bump.hpp  freelist.hpp
include/dmt/allocator/: adapter.hpp  block.hpp  bump.hpp  chunk.hpp  error.hpp  fixed.hpp  freelist.hpp  page.hpp  parameters.hpp  trait.hpp
include/dmt/allocator/internal/: bit_field.hpp  block.hpp  common.hpp  failure.hpp  platform.hpp  util.hpp
include/dmt/handle/: owned.hpp  provider.hpp
include/dmt/handle/internal/: fixed_map.hpp
include/dmt/internal/: block.hpp  chunk.hpp  failure.hpp  log.hpp  logger.hpp  platform.hpp  traits.hpp  util.hpp
include/libdmt/allocator/: adapter.hpp  bump.hpp  internal.hpp  parameters.hpp
include/libdmt/internal/: chunk.hpp  platform.hpp  predicates.hpp  types.hpp  util.hpp
sandbox/: .gitignore  CMakeLists.txt  empty.cpp  main.cpp
src/: libdmt.cpp
test/: test.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: CMakeLists.txt  bump.cpp  fixed.cpp  freelist.cpp  internal.cpp  page.cpp  test.cpp  util.hpp
tests/allocator/: benchmark.cpp  bump.cpp  fixed.cpp  freelist.cpp  functional.cpp  internal.cpp  page.cpp  util.hpp
tests/concurrency/: bump_concurrency_test.cpp  concurrency_allocator_bump.cpp  concurrency_allocator_page.cpp  page_concurrency_test.cpp  thread_safe_container.hpp
tests/functional/: adapter_functional_test.cpp  all_functional_test.cpp  block_array_functional_test.cpp  block_map_functional_test.cpp  bump_functional_test.cpp  fixed_functional_test.cpp  freelist_functional_test.cpp  functional_allocator_all.cpp  functional_allocator_fixed.cpp  functional_allocator_freelist.cpp  functional_allocator_page.cpp  internal_functional_test.cpp  page_functional_test.cpp
tests/handle/: owned.cpp
tests/performance/: all_performance_test.cpp  performance_allocator_all.cpp
